feat(Test and Input): Test added and Input classes for XML parser