@@ -12,6 +12,8 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
+    testImplementation 'org.junit.platform:junit-platform-commons:1.5.2'
+
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 }
 
@@ -20,4 +22,5 @@ application {
 }
 test {
     useJUnitPlatform()
+    jvmArgs '--enable-preview'
 }
